pkg/lang/testdata/ub/config/invalid/state-encryption-not-an-object.ub
state: { @backend: local, encryption: 'oops' }
